fix: * update landing footer to center elements on small screens cy-208

--- a/apps/frontend/src/pages/home/components/footer/styles.module.css
+++ b/apps/frontend/src/pages/home/components/footer/styles.module.css
@@ -7,7 +7,7 @@
 
 .container {
 	--cluster-direction: column;
-	--cluster-vertical-alignment: flex-start;
+	--cluster-vertical-alignment: center;
 	--gutter: var(--space-m);
 
 	padding-block: var(--space-m);
@@ -15,7 +15,7 @@
 
 .nav-links {
 	--cluster-direction: column;
-	--cluster-vertical-alignment: flex-start;
+	--cluster-vertical-alignment: center;
 	--gutter: var(--space-xs);
 }
 
